# project-devops-ci

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  python-ci-v2.yaml  python-ci.yaml
src/http_checker/: checker.py  cli.py
src/http_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_checker.py  test_cli.py
