[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http-checker"
version = "0.1.0"
description = "Simple cli tool to check the status of URLs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28,<3.0",
    "click>8.0,<9.0"
]

[project.scripts]
check-urls = "http_checker.cli:main"