[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http-checker"
version = "2.1.1"
description = "A simple CLI tool to check the status of URLs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28,<3.0",
  "click>=8.0,<9.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "black",
  "mypy",
  "bandit",
  "types-requests"
]

[project.scripts]
check-urls = "http_checker.cli:main"

[tool.ruff]
line-length = 65

[tool.black]
line-length = 65

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-rA -s -v"
